[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/button/left_move.png" type="Texture" id=1]
[ext_resource path="res://assets/button/right_move.png" type="Texture" id=2]
[ext_resource path="res://assets/button/attack_player.png" type="Texture" id=3]
[ext_resource path="res://assets/button/jump_move.png" type="Texture" id=4]
[ext_resource path="res://assets/button/setting.png" type="Texture" id=5]
[ext_resource path="res://src/UserInterface/Control/Control.gd" type="Script" id=6]
[ext_resource path="res://src/UserInterface/Pause/PauseOverlay.tscn" type="PackedScene" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0

[sub_resource type="CircleShape2D" id=2]
radius = 30.0

[sub_resource type="CircleShape2D" id=3]
radius = 30.0

[node name="Control" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="TouchLeft" type="TouchScreenButton" parent="."]
position = Vector2( 38.4698, 370.404 )
normal = ExtResource( 1 )
shape = SubResource( 1 )

[node name="TouchRight" type="TouchScreenButton" parent="."]
position = Vector2( 122.47, 370.404 )
normal = ExtResource( 2 )
shape = SubResource( 2 )

[node name="TouchUP" type="TouchScreenButton" parent="."]
position = Vector2( 80.4698, 306.404 )
normal = ExtResource( 4 )
shape = SubResource( 3 )

[node name="TouchAttack" type="TouchScreenButton" parent="."]
position = Vector2( 699.572, 335.331 )
normal = ExtResource( 3 )

[node name="TouchSetting" type="TouchScreenButton" parent="."]
position = Vector2( 793.194, 14.9539 )
normal = ExtResource( 5 )

[node name="PauseOverlay" parent="." instance=ExtResource( 7 )]
[connection signal="pressed" from="TouchLeft" to="." method="_on_TouchLeft_pressed"]
[connection signal="released" from="TouchLeft" to="." method="_on_TouchLeft_released"]
[connection signal="pressed" from="TouchRight" to="." method="_on_TouchRight_pressed"]
[connection signal="released" from="TouchRight" to="." method="_on_TouchRight_released"]
[connection signal="pressed" from="TouchUP" to="." method="_on_TouchUP_pressed"]
[connection signal="released" from="TouchUP" to="." method="_on_TouchUP_released"]
[connection signal="pressed" from="TouchAttack" to="." method="_on_TouchAttack_pressed"]
[connection signal="released" from="TouchAttack" to="." method="_on_TouchAttack_released"]
[connection signal="pressed" from="TouchSetting" to="." method="_on_TouchSetting_pressed"]
[connection signal="released" from="TouchSetting" to="." method="_on_TouchSetting_released"]
